<resources>
    <string name="app_name">4LLC</string>

    <string name="facebook_application_id" translatable="false">1436381453134228</string>
    <string name="facebook_app_id">1436381453134228</string>
    <string name="fb_login_protocol_scheme">fb1436381453134228</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Donate Blood -->
    <string name="donate_blood_str">Donate Blood</string>

    <!-- settings -->
    <string name="action_settings">Settings</string>

    <!-- preference - EditText -->
    <string name="pref_home_address_label">Home Address</string>
    <string name="pref_home_address_key" translatable="false">homeadd</string>
    <string name="pref_home_address_default" translatable="false"></string>

    <!-- Search Location -->
    <string name="search_location">Search Location</string>

    <!--Donate Blood Locations Activities-->
    <string name="no_internet_connection_header_text">No Internet Connection</string>
    <string name="no_internet_connection_body_text">There does not seem to be an internet connection,
        check your device and make sure data or wifi is enabled</string>

    <string name="no_location_header_text">Location Unavailable</string>
    <string name="no_location_body_text">Unable to find your location, please allow access to your location,
    if access was granted make sure your GPS is set to on</string>
    <string name="location_list_try_agian">Try Again</string>
    <string name="list_explanation_text_header">Blood Location Centers</string>
    <string name="list_explanation_text">Here are the closest donation centers in your area. Tap on a location to view the location on a map</string>

    <!--Main Activity Strings-->
    <string name="campaign_owner_label">CAMPAIGN OWNER</string>
    <string name="parent_charity_label">PARENT CHARITY</string>
    <string name="campaign_story_title">Campaign Story</string>
    <string name="donate_money_title">Donate Money</string>
    <string name="donate_money_body">Help LLS meet its fundraising goal by donating money to be used to help cure cancer.
        Every dollar you donate brings us closer to cureing cancer and saving millions of lives.
        All donations are securely handled by JustGiving.com
    </string>
    <string name="donate_button">Donate</string>
    <string name="donate_blood_title">Donate Blood</string>
    <string name="donate_blood_body">Help LLS meet its goal in raising the blood bank by 10 Gallons. Every Oz of blood donated significantly helps us keep those with Luekemia &amp; Lymphoma fighting to live another day. Use the app to find the nearest Blood Donation Center near you.
    </string>

    <!--dummy values for campaign will get real values from DB-->
    <string name="header_sub_heading">Man Of The Year Campaign</string>
    <string name="header_body">Join us as we lead the battle to defeat cancer. Help the Luekemia &amp; Lymphoma Society.</string>
    <string name="header_run_by">Run by LLS</string>
    <string name="header_charity">Charity Registration No. 277424</string>
    <string name="campaign_owner">Terry Fields</string>
    <string name="campaign_story">Every International Women\'s Day, (March 8th) for a few years now I have gone on Twitter to search for people asking, "When's International Men's Day?" to let them know that that is on November 19th. Weirdly most of them only seem to care about this on International Women\'s Day and when November 19th comes along they do nothing. I think some of them think that there wouldn\'t be an International Men\'s Day. But there is one. It\'s on November 19th. I do this so that everyone else can get on with celebrating International Women\'s Day and using it to raise awareness of the issues that affect women. And trying to achieve equality. Just like the men who ask when International Men's Day is could do on International Men's Day for men, but generally don't. I am not denigrating the people who use IMD to raise awareness. I can't think of anyone who does more to inform people that this day exists. On November 19th. But if you think about it equality works both ways. So if you think men don't  get equality in some areas, then striving for equality will help them too.
    </string>
    <string name="donated_money_progress_text">$25,000 Raised of $75,000 Goal</string>
    <string name="donated_blood_progress_text">10.5 Liters donated of 25 Liter Goal</string>
    <string name="header_heading">Leukemia &amp; Lymphoma Society</string>
    <string name="thank_you_label">Thank You</string>

    <!--strings for the donate money thank you page-->
    <string name="donation_received_header">Thank You</string>
    <string name="donation_received_body">4LLC thanks you for your generous donation. You will be recieving an email from JustGiving.com with further details.</string>
    <string name="donation_received_reference">Donation Reference -   </string>
    <string name="donation_received_amount">Donation Amount -   </string>
    <string name="donation_received_date">Donation Date -   </string>
    <string name="donation_received_name">Donor Name -   </string>
    <string name="donation_received_button">Back To Home</string>
</resources>
