<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_horizontal_large"
        android:orientation="vertical">

        <TextView
            android:id="@+id/story_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donate_money_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/donate_money_body" />
        <ProgressBar
            android:id="@+id/donate_money_progress"
            android:layout_width="340dp"
            android:layout_height="8dp"
            style="@style/progressMoney"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:progress="60"/>
        <Button
            android:id="@+id/donate_money_button"
            style="@style/mainButton"
            android:text="@string/donate_button"
            android:background="@color/colorPrimary" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>