<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/details_top_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentTop="true"
                android:background="#eee" />

            <ImageView
                android:id="@+id/details_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/details_top_divider"
                android:layout_marginLeft="@dimen/margin_horizontal_large"
                android:layout_marginTop="@dimen/margin_vertical_large"
                android:src="@drawable/ic_account_circle_black_24dp" />

            <TextView
                android:id="@+id/details_campaign_owner_label"
                style="@style/captionStyle"
                android:layout_alignTop="@id/details_avatar"
                android:layout_marginLeft="@dimen/margin_horizontal_small"
                android:layout_toRightOf="@id/details_avatar"
                android:text="@string/campaign_owner_label" />

            <TextView
                android:id="@+id/details_campaign_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/details_campaign_owner_label"
                android:layout_below="@id/details_campaign_owner_label"
                android:text="@string/campaign_owner"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/parent_charity_label"
                style="@style/captionStyle"
                android:layout_alignTop="@id/parent_charity"
                android:layout_toLeftOf="@id/parent_charity"
                android:text="@string/parent_charity_label"
                app:layout_constraintBottom_toBottomOf="@id/parent_charity" />

            <ImageView
                android:id="@+id/parent_charity"
                android:layout_width="71dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/details_campaign_owner_label"
                android:layout_marginRight="@dimen/margin_horizontal_large"
                android:src="@drawable/lls_logo" />

            <ImageView
                android:id="@+id/details_bottom_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/details_avatar"
                android:layout_marginTop="@dimen/margin_vertical_large"
                android:background="#eee" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_horizontal_large"
            android:layout_marginRight="@dimen/margin_horizontal_large"
            android:layout_marginTop="@dimen/margin_vertical_large"
            android:orientation="vertical">

            <TextView
                android:id="@+id/story_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campaign_story_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/campaign_story" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>